Add swagger to rest endpoints
