# api-gateway/api-gateway-service/internal/api/router.go
@@ -42,13 +42,13 @@ func (r *Router) Setup(router *gin.Engine) {
 	{
 		router.POST("/api/v1/user/refresh_token", userHandler.RefreshAccessToken)
 		router.POST("/api/v1/user/logout", userHandler.LogOutUser)
-		router.GET("/api/v1/user/get", userHandler.GetUser)
+		router.GET("/api/v1/user/:id", userHandler.GetUser)
 
 		router.POST("/api/v1/job/create", jobHandler.CreateJob)
-		router.GET("/api/v1/job/get", jobHandler.GetJob)
+		router.GET("/api/v1/job/:id", jobHandler.GetJob)
 		router.GET("/api/v1/job/list", jobHandler.ListJobs)
 		router.POST("/api/v1/job/update", jobHandler.UpdateJob)
-		router.POST("/api/v1/job/delete", jobHandler.DeleteJob)
+		router.DELETE("/api/v1/job/:id", jobHandler.DeleteJob)
 
 		router.GET("/api/v1/report/list", reportHandler.ListReports)
 	}
