# api-gateway/api-gateway-service/internal/models/job.go
@@ -4,8 +4,35 @@ import (
 	"time"
 
 	"github.com/KhaledHosseini/play-microservices/api-gateway/api-gateway-service/proto"
+	"github.com/thoas/go-funk"
 	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
 )
+
+type Job struct {
+	Id            string
+	Name          string
+	Description   string
+	Schedule_time time.Time
+	Created_time  time.Time
+	Updated_time  time.Time
+	Status        int32
+	Job_type      int32
+	Job_data      string
+}
+
+func JobFromProto(p *proto.Job) *Job {
+	return &Job{
+		Id:            p.Id,
+		Name:          p.Name,
+		Description:   p.Description,
+		Schedule_time: p.ScheduleTime.AsTime(),
+		Created_time:  p.CreatedTime.AsTime(),
+		Updated_time:  p.UpdatedTime.AsTime(),
+		Status:        int32(p.Status),
+		Job_type:      int32(p.JobType),
+		Job_data:      p.JobData,
+	}
+}
 
 type CreateJobRequest struct {
 	Name         string
@@ -25,6 +52,16 @@ func (cjr *CreateJobRequest) ToProto() *proto.CreateJobRequest {
 	}
 }
 
+type CreateJobResponse struct {
+	Id string
+}
+
+func CreateJobResponseFromProto(p *proto.CreateJobResponse) *CreateJobResponse {
+	return &CreateJobResponse{
+		Id: p.Id,
+	}
+}
+
 type GetJobRequest struct {
 	Id string
 }
@@ -35,15 +72,28 @@ func (gjr *GetJobRequest) ToProto() *proto.GetJobRequest {
 	}
 }
 
-type ListJobsRequest struct {
-	Page int64
-	Size int64
+type ListJobsResponse struct {
+	TotalCount int64
+	TotalPages int64
+	Page       int64
+	Size       int64
+	HasMore    bool
+	Jobs       []Job
 }
 
-func (ljr *ListJobsRequest) ToProto() *proto.ListJobsRequest {
-	return &proto.ListJobsRequest{
-		Page: ljr.Page,
-		Size: ljr.Size,
+func ListJobsResponseFromProto(p *proto.ListJobsResponse) *ListJobsResponse {
+
+	jobs := funk.Map(p.Jobs, func(x *proto.Job) Job {
+		return *JobFromProto(x)
+	}).([]Job)
+
+	return &ListJobsResponse{
+		TotalCount: p.TotalCount,
+		TotalPages: p.TotalPages,
+		Page:       p.Page,
+		Size:       p.Size,
+		HasMore:    p.HasMore,
+		Jobs:       jobs,
 	}
 }
 
@@ -67,12 +117,22 @@ func (ujr *UpdateJobRequest) ToProto() *proto.UpdateJobRequest {
 	}
 }
 
-type DeleteJobRequest struct {
-	Id string
+type UpdateJobResponse struct {
+	Message string
 }
 
-func (gjr *DeleteJobRequest) ToProto() *proto.DeleteJobRequest {
-	return &proto.DeleteJobRequest{
-		Id: gjr.Id,
+func UpdateJobResponseFromProto(p *proto.UpdateJobResponse) *UpdateJobResponse {
+	return &UpdateJobResponse{
+		Message: p.Message,
+	}
+}
+
+type DeleteJobResponse struct {
+	Message string
+}
+
+func DeleteJobRequestFromProto(p *proto.DeleteJobResponse) DeleteJobResponse {
+	return DeleteJobResponse{
+		Message: p.Message,
 	}
 }
